tests: inhouse testing framework using db shin
The tests does NOT use the mainstream orchestrate db, instead it uses a
tests shim that had just the collections and *one* apikey in it. This
protects the service if anything ever happens.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests.js"
   },
   "author": "Jared Allard <jaredallard@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.0",
     "body-parser": "^1.14.1",
     "colors": "^1.1.2",
     "debug": "^2.2.0",
@@ -16,6 +17,7 @@
     "morgan": "^1.6.1",
     "node-uuid": "^1.4.7",
     "openpgp": "^1.3.0",
-    "orchestrate": "^0.6.0"
+    "orchestrate": "^0.6.0",
+    "request": "^2.67.0"
   }
 }
